# ndbioimage

./: .gitignore  README.md  pyproject.toml  setup.py  test_open.ipynb
.github/workflows/: pytest.yml
ndbioimage/: .gitignore  __init__.py  _version.py  jvm.py  transform.txt  transforms.py
ndbioimage/readers/: __init__.py  bfread.py  cziread.py  fijiread.py  metaseriesread.py  ndread.py  ometifread.py  seqread.py  tifread.py
tests/: test_open.py  test_slicing.py  test_ufuncs.py
