[project]
name = "ndbioimage"
version = "2025.3.0"
description = "Bio image reading, metadata and some affine registration."
authors = [
    { name = "W. Pomp", email = "w.pomp@nki.nl" }
]
license = { text = "GPL-3.0-or-later"}
readme = "README.md"
keywords = ["bioformats", "imread", "numpy", "metadata"]
include = ["transform.txt"]
requires-python = ">=3.10"
exclude = ["ndbioimage/jars"]

dependencies = [
    "czifile == 2019.7.2",
    "imagecodecs",
    "JPype1",
    "lxml",
    "numpy >= 1.20",
    "ome-types",
    "pandas",
    "parfor >= 2025.1.0",
    "pint",
    "pyyaml",
    "SimpleITK-SimpleElastix; sys_platform != 'darwin'",
    "scikit-image",
    "tifffile <= 2025.1.10",
    "tiffwrite >= 2024.12.1",
    "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]
write = ["matplotlib", "scikit-video"]

[project.urls]
repository = "https://github.com/wimpomp/ndbioimage"

[project.scripts]
ndbioimage = "ndbioimage:main"

[tool.pytest.ini_options]
filterwarnings = ["ignore:::(colorcet)"]

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
